Introducing Product Category and Navigation Bar
The concept of product category has been added to the project allowing
simple classification of the products. Products can belong to more than
one categories.

Rudimentary navigation bar has been added to the top of all pages using
fragment capabilities of thymeleaf. Simple stylesheet was also added to
the project.

Spring-boot framework has been updated to 2.0.2 and Kotlin to 1.2.41

--- a/src/main/resources/templates/farms.html
+++ b/src/main/resources/templates/farms.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Farms</title>
-</head>
+<head th:replace="fragments/head(pageTitle='Farms')"></head>
 <body>
+<div th:replace="fragments/navigation(selectedPage='Farms')"></div>
 <h1>Participating Farms</h1>
+
 <table>
     <tr>
         <th>Id</th>
         <th>Name</th>
         <th>Site</th>
+        <th>Farmers</th>
+        <th>Products</th>
     </tr>
     <tr th:each="farm:${farms}">
         <td th:text="${farm.id}">1</td>
         <td th:text="${farm.name}">Bunkera</td>
         <td th:text="${farm.site}">Site description</td>
+        <td th:text="${farm.farmers}">Bunkera</td>
+        <td th:text="${farm.products}">Site description</td>
     </tr>
 </table>
 </body>
