--- a/src/main/resources/templates/farmers.html
+++ b/src/main/resources/templates/farmers.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Farmers</title>
-</head>
+<head th:replace="fragments/head(pageTitle='Farmers')"></head>
 <body>
+<div th:replace="fragments/navigation(selectedPage='Farmers')"></div>
 <h1>Participating Farmers</h1>
+
 <table>
     <tr>
         <th>Id</th>
@@ -14,7 +13,7 @@
     </tr>
     <tr th:each="farmer:${farmers}">
         <td th:text="${farmer.id}">1</td>
-        <td th:text="${farmer.name}">Bunkera</td>
+        <td th:text="${farmer.firstName +' '+ farmer.lastName}">Hristo Aladjov</td>
         <td th:text="${farmer.farms}">farms</td>
     </tr>
 </table>
