Refactoring of bidirectional relationships implementation
Initial quick and dirty implementation for bidirectional relationships
(like: Farmers - Farms, Product - Categories, Farms - Products) was
refactored in a way that does not allow adding just one side of the
relationship and forgetting the other. E.g
        bunkera.farmers.add(hristo)
        hristo.farms.add(bunkera)
is now replaced by
        bunkera.addFarmerRelationship(hristo)
or
        hristo.addFarmRelationship(bunkera)

Since mapped properties were made private templates need to use new
getters.

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -15,7 +15,7 @@
     <tr th:each="category:${categories}">
         <td th:text="${category.id}">1</td>
         <td th:text="${category.name}">Apple</td>
-        <td th:text="${category.products}">List of farms</td>
+        <td th:text="${category.getProducts()}">List of farms</td>
     </tr>
 </table>
 </body>
