--- a/src/main/resources/templates/farms.html
+++ b/src/main/resources/templates/farms.html
@@ -17,8 +17,8 @@
         <td th:text="${farm.id}">1</td>
         <td th:text="${farm.name}">Bunkera</td>
         <td th:text="${farm.site}">Site description</td>
-        <td th:text="${farm.farmers}">Bunkera</td>
-        <td th:text="${farm.products}">Site description</td>
+        <td th:text="${farm.getFarmers()}">Bunkera</td>
+        <td th:text="${farm.getProducts()}">Site description</td>
     </tr>
 </table>
 </body>
