--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -15,8 +15,8 @@
     <tr th:each="product:${products}">
         <td th:text="${product.id}">1</td>
         <td th:text="${product.name}">Apple</td>
-        <td th:text="${product.farms}">List of farms</td>
-        <td th:text="${product.categories}">List of farms</td>
+        <td th:text="${product.getFarms()}">List of farms</td>
+        <td th:text="${product.getCategories()}">List of farms</td>
     </tr>
 </table>
 </body>
