Initial unit testing for model and controller classes
nhaarman/mockito-kotlin dependency has been added to the project to facilitate utilization of Mockito with Kotlin

BugFix: copy paste errors were identified in removeFarmerRelationship and removeProductRelationship while building the new unit tests.

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -12,10 +12,10 @@
         <th>Name</th>
         <th>Products</th>
     </tr>
-    <tr th:each="category:${categories}">
+    <tr th:each="category:${farms}">
         <td th:text="${category.id}">1</td>
         <td th:text="${category.name}">Apple</td>
-        <td th:text="${category.getProducts()}">List of farms</td>
+        <td th:text="${category.getProducts()}">List of farmers</td>
     </tr>
 </table>
 </body>
