--- a/src/main/resources/templates/farms.html
+++ b/src/main/resources/templates/farms.html
@@ -13,7 +13,7 @@
         <th>Farmers</th>
         <th>Products</th>
     </tr>
-    <tr th:each="farm:${farms}">
+    <tr th:each="farm:${farmers}">
         <td th:text="${farm.id}">1</td>
         <td th:text="${farm.name}">Bunkera</td>
         <td th:text="${farm.site}">Site description</td>
