Introducing Service Layer and Bootstrap 4
Service layer with set of interfaces and their default implementation were introduced. Tests for all new methods were developed first (test driven development) with better separation of concerns between Controller and Service classes.

Bootstrap 4 was introduced for rendering and layout of the various data views. The default list of farms is currently provided in
http://localhost:8080/v1/farms
which is linked to farmer and product profiles. All views are preliminary with images from external sources.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-.footer{text-align: right;}
+.footer{text-align: center;}
 .navigationBar{
     list-style-type: none;
     margin: 0;
@@ -25,4 +25,39 @@
 h1{
     color: #7A7A7A;
     font-size: 1.5em;
+    margin-left: 12px;
+
+}
+
+.searchResult{
+    display: block;
+    padding-bottom: 18px;
+}
+
+.resultHeading{
+    display: block;
+    border-bottom: 1px solid #4CAF50;
+    padding-bottom: 0px;
+}
+
+.resultTitle{
+    color: #7A7A7A;
+}
+
+.address{
+    color: #7A7A7A;
+    margin-top: 0px;
+}
+.hours{
+    color: #4CAF50;
+    margin-top: 12px;
+}
+
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 5;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 6;
+  }
 }
