--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -12,7 +12,7 @@
         <th>Name</th>
         <th>Products</th>
     </tr>
-    <tr th:each="category:${farms}">
+    <tr th:each="category:${categories}">
         <td th:text="${category.id}">1</td>
         <td th:text="${category.name}">Apple</td>
         <td th:text="${category.getProducts()}">List of farmers</td>
