--- a/src/main/resources/templates/farmers.html
+++ b/src/main/resources/templates/farmers.html
@@ -5,7 +5,7 @@
 <div th:replace="fragments/navigation(selectedPage='Farmers')"></div>
 <h1>Participating Farmers</h1>
 
-<table>
+<table class="Table">
     <tr>
         <th>Id</th>
         <th>Name</th>
