--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html  lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <p th:fragment="footer" class="footer">
-    A <a href="https://technologygardens.com">Technology Gardens</a> Platform
+    <a href="https://technologygardens.com"><img style="padding:0;margin:0"
+                                                 src="http://technologygardens.com/sites/default/files/TGLogo_1.png"
+                                                 alt="Technology Gardens">
+    </a>
 </p>
 </html>
