--- a/src/main/resources/templates/farms.html
+++ b/src/main/resources/templates/farms.html
@@ -5,21 +5,44 @@
 <div th:replace="fragments/navigation(selectedPage='Farms')"></div>
 <h1>Participating Farms</h1>
 
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Site</th>
-        <th>Farmers</th>
-        <th>Products</th>
-    </tr>
-    <tr th:each="farm:${farmers}">
-        <td th:text="${farm.id}">1</td>
-        <td th:text="${farm.name}">Bunkera</td>
-        <td th:text="${farm.site}">Site description</td>
-        <td th:text="${farm.getFarmers()}">Bunkera</td>
-        <td th:text="${farm.getProducts()}">Site description</td>
-    </tr>
-</table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="container-fluid">
+                <div class="row mb-4 border" th:each="farm:${farms}">
+                    <!--/*@thymesVar id="farm" type="com.technologygardens.pickyourown.model.Farm"*/-->
+                    <div class=" col-sm-4 m-0 p-0">
+                        <a href="#" th:href="@{'/v1/farms/'+${farm.id}}"><img style="height: 200px; padding:0;margin:0"
+                                                                             src="http://greybrucebusinessjournal.ca/wp-content/uploads/2014/10/farm-2.jpg"></a>
+                    </div>
+                    <div class="col-sm-5 ml-0">
+                        <a href="#" th:href="@{'/v1/farms/'+${farm.id}}"><h3 class="resultTitle" th:text="${farm.name}">
+                            Farm Name</h3></a>
+                        <p th:text="${farm.description}">It is small family farm</p>
+                        <b>Products:</b>
+                        <span th:each="product, iterStat:${farm.getProducts()}">
+                                <a th:text="!${iterStat.last} ? ${product.name} + ',': ${product.name}">Farmer</a>
+                            </span><br>
+                    </div>
+                    <div class="col-sm-3 mt-2 mb-2 border-left">
+                        <span class="address" th:text="${farm.site.address}"></span><br>
+                        <span class="address"
+                              th:text="${farm.site.city+' '+farm.site.postalCode+','+farm.site.country}"></span><br>
+                        <br><span class="hours" th:text="${farm.site.hours}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <iframe width="100%" height="540" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://www.openstreetmap.org/export/embed.html?bbox=17.050781250000004%2C40.287906612507406%2C31.190185546875004%2C45.120052841530544&amp;layer=mapnik"></iframe>
+            <br/>
+            <small><a href="https://www.openstreetmap.org/#map=7/42.751/24.120">View Larger Map</a></small>
+        </div>
+    </div>
+</div>
+
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
+
