--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<ul class="navigationBar" th:fragment="navigation(selectedPage)">
-    <li th:class="${#strings.equals(selectedPage,'Home')} ? activeItem : 'navigationItem'" ><a href="/">Home</a></li>
-    <li th:class="${#strings.equals(selectedPage,'Farms')} ? activeItem : 'navigationItem'" ><a href="/v1/farmers">Farms</a></li>
-    <li th:class="${#strings.equals(selectedPage,'Farmers')} ? activeItem : 'navigationItem'"  ><a href="/v1/farmers">Farmers</a></li>
-    <li th:class="${#strings.equals(selectedPage,'Products')} ? activeItem : 'navigationItem'" ><a href="/v1/products">Products</a></li>
-    <li th:class="${#strings.equals(selectedPage,'Categories')} ? activeItem : 'navigationItem'" ><a href="/v1/farms">Categories</a></li>
-</ul>
+<nav th:fragment="navigation(selectedPage)" class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand" href="#">Pick Your Own</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
+            aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" style="">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor03">
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control is-valid mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
 </html>
+
