--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head(pageTitle='Pick Your Own Services')"></head>
 <body>
-<div th:replace="fragments/navigation(selectedPage='Home')"></div>
+<div th:replace="fragments/navigation(selectedPage = 'Home')"></div>
 <h1>Pick Your Own Services</h1>
 
-<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-        src="https://www.openstreetmap.org/export/embed.html?bbox=17.050781250000004%2C40.287906612507406%2C31.190185546875004%2C45.120052841530544&amp;layer=mapnik"
-        style="border: 1px solid black"></iframe>
-<br/>
-<small><a href="https://www.openstreetmap.org/#map=7/42.751/24.120">View Larger Map</a></small>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-8">
+            <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-sm-4">
+            <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                    src="https://www.openstreetmap.org/export/embed.html?bbox=17.050781250000004%2C40.287906612507406%2C31.190185546875004%2C45.120052841530544&amp;layer=mapnik"></iframe>
+            <br/>
+            <small><a href="https://www.openstreetmap.org/#map=7/42.751/24.120">View Larger Map</a></small>
+        </div>
+    </div>
+</div>
 <div th:replace="fragments/footer"></div>
 </body>
 </html>
