Business hours are now explicitly defined in the object model (no longer represented by string)
Farm Site is no longer embedded in Farm to allow easier migration toward farms with multiple sites. Business hours and special events are now represented by classes and presisted separately. All templates were modified to use the new data structures.

--- a/src/main/resources/templates/farm.html
+++ b/src/main/resources/templates/farm.html
@@ -14,7 +14,7 @@
             <p th:text="${farm.site.seasonOpens==farm.site.seasonCloses?'Year-round':'Opens:'+farm.site.seasonOpens+' closes:'+farm.site.seasonCloses}">
                 Opens in May</p>
             <h3>Hours</h3>
-            <div class="hours" th:text="${farm.site.hours}"></div>
+            <div th:each="hours:${farm.site.getBusinessHours()}" ><p class="hours" th:text="${hours}"></p></div>
         </div>
 
         <div class="col">
