New price class has been added to data model. It assigns value to a unit of produce within a range of certain quantities. Multiple prices can be assigned to pairs of product and farm allowing users to define volume discounts.
Basic CRUD operations have been added to all classes in the data model. Related controllers and services have been implemented, however only initial stubs for thymeleaf templates have been created. Simple error handling has been also added.

Farm class has been updated and now have image field which is persisted as ByteArray. Simple image service and controllers have been implemented to allow users to submit custom images. Rudimentary upload form has been added to handle the upload interface.

--- a/src/main/resources/templates/farms.html
+++ b/src/main/resources/templates/farms.html
@@ -12,8 +12,11 @@
                 <div class="row mb-4 border" th:each="farm:${farms}">
                     <!--/*@thymesVar id="farm" type="com.technologygardens.pickyourown.model.Farm"*/-->
                     <div class=" col-sm-4 m-0 p-0">
-                        <a href="#" th:href="@{'/v1/farms/'+${farm.id}}"><img style="height: 200px; padding:0;margin:0"
-                                                                             src="http://greybrucebusinessjournal.ca/wp-content/uploads/2014/10/farm-2.jpg"></a>
+                        <a href="#" th:href="@{'/v1/farms/'+${farm.id}}">
+                            <img style="height: 200px; padding:0;margin:0"
+                                 src="http://greybrucebusinessjournal.ca/wp-content/uploads/2014/10/farm-2.jpg"
+                                 th:src="@{'/v1/farms/' + ${farm.id} + '/farmimage'}">
+                        </a>
                     </div>
                     <div class="col-sm-5 ml-0">
                         <a href="#" th:href="@{'/v1/farms/'+${farm.id}}"><h3 class="resultTitle" th:text="${farm.name}">
@@ -21,7 +24,7 @@
                         <p th:text="${farm.description}">It is small family farm</p>
                         <b>Products:</b>
                         <span th:each="product, iterStat:${farm.getProducts()}">
-                                <a th:text="!${iterStat.last} ? ${product.name} + ',': ${product.name}">Farmer</a>
+                                <a th:text="!${iterStat.last} ? ${product.name} + ${priceService.getFormattedBasePrice(farm,product)}+',': ${product.name}+${priceService.getFormattedBasePrice(farm,product)}">Farmer</a>
                             </span><br>
                     </div>
                     <div class="col-sm-3 mt-2 mb-2 border-left">
