--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -23,6 +23,23 @@
             th:src="@{/webjars/bootstrap/4.1.1/js/bootstrap.min.js}">
     </script>
 
+
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css"
+          th:href="@{/webjars/tempusdominus-bootstrap-4/5.0.0-alpha.16/build/css/tempusdominus-bootstrap-4.min.css}"/>
+
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"
+            th:src="@{/webjars/momentjs/2.22.1/min/moment-with-locales.min.js}"></script>
+
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"
+            th:src="@{/webjars/tempusdominus-bootstrap-4/5.0.0-alpha.16/build/js/tempusdominus-bootstrap-4.min.js}"></script>
+
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          th:href="@{/webjars/font-awesome/5.0.13-1/css/fontawesome-all.min.css}"/>
+
     <link th:href="@{/css/style.css}" rel="stylesheet">
 
 </head>
