--- a/src/main/resources/templates/farm.html
+++ b/src/main/resources/templates/farm.html
@@ -10,10 +10,10 @@
             <h2 class="resultTitle" th:text="${farm.name}">Farm Name</h2>
             <p th:text="${farm.description}">It is small family farm</p>
             <br>
-            <h3>When to visit</h3>
+            <h3 th:text="#{captions.whenToVisit}" >When to visit:</h3>
             <p th:text="${farm.site.seasonOpens==farm.site.seasonCloses?'Year-round':'Opens:'+farm.site.seasonOpens+' closes:'+farm.site.seasonCloses}">
                 Opens in May</p>
-            <h3>Hours</h3>
+            <h3 th:text="#{captions.hours}">Hours</h3>
             <div th:each="hours:${farm.site.getBusinessHours()}" ><p class="hours" th:text="${hours}"></p></div>
         </div>
 
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <h2 class="resultTitle">Products:</h2>
+    <h2 class="resultTitle" th:text="#{captions.products}">Products:</h2>
     <div class="row">
         <div class="col">
             <div class="card-columns">
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <h2 class="resultTitle">How to reach us</h2>
+    <h2 class="resultTitle" th:text="#{captions.howToReachUs}">How to reach us</h2>
     <div class="row">
         <div class="col">
             <iframe width="100%" height="540" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
@@ -66,10 +66,10 @@
                 </div>
             </div>
 
-            <h4>Address:</h4>
+            <h4 th:text="#{captions.address}">Address:</h4>
             <span class="address"
                   th:text="${farm.site.address+' '+farm.site.city+' '+farm.site.postalCode+','+farm.site.country}"></span><br>
-            <h4>Directions:</h4>
+            <h4 th:text="#{captions.directions}">Directions:</h4>
             <span class="directions" th:text="${farm.site.directions}"></span><br>
         </div>
     </div>
