--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,15 @@
 <head th:replace="fragments/head(pageTitle='Pick Your Own Services')"></head>
 <body>
 <div th:replace="fragments/navigation(selectedPage = 'Home')"></div>
-<h1>Pick Your Own Services</h1>
+<h1 th:text="#{captions.services}">Pick Your Own Services</h1>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-8">
-            <p>Lorem ipsum...</p>
+            <a href="/v1/farms/" th:text="#{captions.participatingFarms}"> Participating Farms</a><br>
+            <a href="/v1/products/" th:text="#{captions.products}"> Products</a><br>
+            <a href="/v1/farmers/" th:text="#{captions.participatingFarmers}"> Participating Farmers</a><br>
+            <a href="/v1/categories/" th:text="#{captions.categories}"> Categories</a><br>
         </div>
         <div class="col-sm-4">
             <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
