--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <h2 class="resultTitle">Farms:</h2>
+    <h2 class="resultTitle" th:text="#{captions.farms}">Farms:</h2>
 
     <div class="row mb-4 border" th:each="farm:${product.getFarms()}">
         <!--/*@thymesVar id="farm" type="com.technologygardens.pickyourown.model.Farm"*/-->
@@ -34,7 +34,7 @@
             <a href="#" th:href="@{'/v1/farms/'+${farm.id}}"><h3 class="resultTitle" th:text="${farm.name}">
                 Farm Name</h3></a>
             <p th:text="${farm.description}">It is small family farm</p>
-            <b>Products:</b>
+            <b><span th:text="#{captions.products}">Products:</span></b>
             <span th:each="product, iterStat:${farm.getProducts()}">
                                 <a th:text="!${iterStat.last} ? ${product.name} + ',': ${product.name}">Farmer</a>
                             </span><br>
